--- a/css/index.css
+++ b/css/index.css
@@ -130,7 +130,57 @@ table {
 * {
   box-sizing: border-box;
 }
+html {
+  font-size: 62.5%;
+}
 html,
 body {
   height: 100%;
+}
+.font-style-1 {
+  color: crimson;
+  font-size: 3rem;
+  font-family: 'Calistoga', cursive;
+}
+.font-style-2 {
+  font-family: 'Calistoga';
+  color: crimson;
+  font-size: 2rem;
+}
+.flex-row-nowrap {
+  display: flex;
+  flex-flow: row nowrap;
+}
+.container {
+  width: 1000px;
+  margin: 0 auto;
+}
+.container header nav {
+  width: 500px;
+  background: white;
+  position: fixed;
+  display: flex;
+  flex-flow: row nowrap;
+  justify-content: space-between;
+}
+.container header nav a {
+  text-decoration: none;
+  font-family: 'Calistoga';
+  color: crimson;
+  font-size: 2rem;
+  padding: 20px 0;
+}
+.container .top {
+  padding-top: 60px;
+  display: flex;
+  flex-flow: row nowrap;
+  justify-content: center;
+}
+.container .image {
+  height: 450px;
+  width: 450px;
+}
+.container .intro-content {
+  height: 450px;
+  width: 450px;
 }
