--- a/less/index.less
+++ b/less/index.less
@@ -62,18 +62,24 @@ html, body {
 }
 
 @font-color: crimson;
+@font-style: 'Calistoga';
 
 .font-style-1{
 	color: @font-color;
-	font-size: 3rem;
-	font-family: 'Calistoga', cursive;
+	font-size: 4rem;
+	font-family: @font-style;
 }
 
 .font-style-2{
-	
-	font-family: 'Calistoga';
+	font-family: @font-style;
 	color: @font-color;
 	font-size: 2rem;
+}
+
+.font-style-3{
+	font-family: @font-style;
+	color: black;
+	font-size: 1.5rem;
 }
 
 
@@ -83,13 +89,15 @@ html, body {
 }
 
 .container{
-	width: 1000px;
+	width: 800px;
 	margin: 0 auto;
+	.font-style-3();
 	header{
 		nav{
-			width: 500px;
+			width: 800px;
 			background: white;
 			position: fixed;
+			z-index: 100;
 			.flex-row-nowrap();
 			justify-content: space-between;
 
@@ -105,13 +113,40 @@ html, body {
 		.flex-row-nowrap();
 		justify-content: center;
 	}
+	.wrapper{
+		height:400px;
+		width:400px;
+		display:flex;
+		justify-content: center;
+		align-items: center;
+	}
+	.img-div{
+		height: 300px;
+		width: 300px;
+		overflow:hidden;
+		display: flex;
+
+		justify-content:center;
+		border-radius: 50%;
+	}
 	.image{
-		height: 450px;
-		width: 450px;
+		transform: rotate(90deg);
+		height: 100%;
+		margin-top: 50px;
 	}
 	.intro-content{
-		height: 450px;
-		width: 450px;
+		height: 400px;
+		width: 400px;
 	}
+	.intro-content{
+		display: flex;
+		flex-flow: column nowrap;
+		justify-content: center;
+		align-items: center;
+		h2{
+		.font-style-1();
+		}
+	}
+	
 
 }
