--- a/css/index.css
+++ b/css/index.css
@@ -141,21 +141,21 @@ body {
 .font-style-1 {
   color: crimson;
   font-size: 4rem;
-  font-family: 'Calistoga';
+  font-family: 'Yeseva One', cursive;
 }
 .font-style-2 {
-  font-family: 'Calistoga';
+  font-family: 'Yeseva One', cursive;
   color: crimson;
   font-size: 2rem;
 }
 .font-style-3 {
-  font-family: 'Calistoga';
+  font-family: 'Open Sans', sans-serif;
   color: black;
-  font-size: 1.5rem;
+  font-size: 2rem;
 }
 .button {
   text-decoration: none;
-  font-family: 'Calistoga';
+  font-family: 'Yeseva One', cursive;
   color: crimson;
   font-size: 2rem;
   padding: 10px 20px;
@@ -166,12 +166,22 @@ body {
   display: flex;
   flex-flow: row nowrap;
 }
+.flex-column-nowrap {
+  display: flex;
+  flex-flow: column nowrap;
+}
 .container {
   width: 800px;
   margin: 0 auto;
-  font-family: 'Calistoga';
+  font-family: 'Open Sans', sans-serif;
   color: black;
-  font-size: 1.5rem;
+  font-size: 2rem;
+}
+@media (max-width: 500px) {
+  .container {
+    width: 450px;
+    text-align: center;
+  }
 }
 .container header nav {
   padding: 10px 0;
@@ -181,24 +191,48 @@ body {
   z-index: 1;
   display: flex;
   flex-flow: row nowrap;
-  justify-content: space-between;
+  justify-content: space-around;
   border-bottom: 1px solid crimson;
+}
+@media (max-width: 500px) {
+  .container header nav {
+    width: 450px;
+    position: static;
+    display: flex;
+    flex-flow: column nowrap;
+    align-items: center;
+    border: 0;
+  }
 }
 .container header nav a {
   padding: 20px 0;
   text-decoration: none;
-  font-family: 'Calistoga';
+  font-family: 'Yeseva One', cursive;
   color: crimson;
   font-size: 2rem;
   padding: 10px 20px;
   border: 1px solid crimson;
   border-radius: 100px;
 }
+@media (max-width: 500px) {
+  .container header nav a {
+    margin-top: 20px;
+    width: 350px;
+    text-align: center;
+  }
+}
 .container .top {
   padding-top: 60px;
   display: flex;
   flex-flow: row nowrap;
   justify-content: center;
+}
+@media (max-width: 500px) {
+  .container .top {
+    display: flex;
+    flex-flow: column nowrap;
+    align-items: center;
+  }
 }
 .container .wrapper {
   height: 400px;
@@ -221,21 +255,27 @@ body {
   margin-top: 50px;
 }
 .container .content {
-  height: 350px;
   width: 350px;
+  padding: 10px;
+}
+@media (max-width: 500px) {
+  .container .content {
+    padding: 50px 0;
+  }
 }
 .container .intro.content {
   height: 400px;
   width: 400px;
+  padding: 20px;
   display: flex;
   flex-flow: column nowrap;
-  justify-content: center;
-  align-items: center;
+  justify-content: space-evenly;
+  align-content: center;
 }
 .container .intro.content h2 {
   color: crimson;
   font-size: 4rem;
-  font-family: 'Calistoga';
+  font-family: 'Yeseva One', cursive;
 }
 .container hr {
   border-top: 1px solid crimson;
@@ -247,6 +287,11 @@ body {
   border-right: 1px solid crimson;
   margin-top: -51px;
 }
+@media (max-width: 500px) {
+  .container .vl {
+    display: none;
+  }
+}
 .container .middle {
   height: 100%;
   padding: 50px 0;
@@ -254,16 +299,23 @@ body {
   flex-flow: row nowrap;
   justify-content: space-between;
 }
+@media (max-width: 500px) {
+  .container .middle {
+    display: flex;
+    flex-flow: column nowrap;
+    align-items: center;
+  }
+}
 .container .middle h3 {
   color: crimson;
   font-size: 4rem;
-  font-family: 'Calistoga';
+  font-family: 'Yeseva One', cursive;
   padding-top: 10px;
   text-align: center;
 }
 .container .middle .skills li {
   text-decoration: none;
-  font-family: 'Calistoga';
+  font-family: 'Yeseva One', cursive;
   color: crimson;
   font-size: 2rem;
   padding: 10px 20px;
@@ -286,7 +338,26 @@ body {
 }
 .container .middle .work-history table th,
 .container .middle .work-history table td {
-  text-align: right;
+  text-align: center;
   height: 50px;
   padding: 15px 15px 15px 0;
+}
+.container .bottom {
+  margin-top: 50px;
+}
+.container .bottom h3 {
+  color: crimson;
+  font-size: 4rem;
+  font-family: 'Yeseva One', cursive;
+  text-align: center;
+  padding-bottom: 30px;
+}
+.container .bottom span {
+  font-family: 'Yeseva One', cursive;
+  color: crimson;
+  font-size: 2rem;
+}
+.container .bottom li {
+  text-align: center;
+  padding: 30px 0;
 }
