--- a/less/index.less
+++ b/less/index.less
@@ -63,24 +63,25 @@ html, body{
 }
 
 @font-color: crimson;
-@font-style: 'Calistoga';
+@font-style-a: 'Yeseva One' , cursive;
+@font-style-b: 'Open Sans' , sans-serif;
 
 .font-style-1{
 	color: @font-color;
 	font-size: 4rem;
-	font-family: @font-style;
+	font-family: @font-style-a;
 }
 
 .font-style-2{
-	font-family: @font-style;
+	font-family: @font-style-a;
 	color: @font-color;
 	font-size: 2rem;
 }
 
 .font-style-3{
-	font-family: @font-style;
+	font-family: @font-style-b;
 	color: black;
-	font-size: 1.5rem;
+	font-size: 2rem;
 }
 
 .button{
@@ -96,10 +97,21 @@ html, body{
 	flex-flow:row nowrap;
 }
 
+.flex-column-nowrap{
+	display:flex;
+	flex-flow:column nowrap;
+}
+
+@mobile: ~"(max-width: 500px)";
+
 .container{
 	width: 800px;
 	margin: 0 auto;
 	.font-style-3();
+	@media @mobile{
+		width: 450px;
+		text-align: center;
+	}
 	header{
 		nav{
 			padding: 10px 0;
@@ -108,13 +120,30 @@ html, body{
 			position: fixed;
 			z-index: 1;
 			.flex-row-nowrap();
-			justify-content: space-between;
+			justify-content: space-around;
 			border-bottom: 1px solid @font-color;
+
+			@media @mobile{
+				width: 450px;
+				position: static;
+				.flex-column-nowrap();
+				align-items: center;
+				border: 0;
+			}
+			
 
 			a{
 				text-decoration: none;
 				padding: 20px 0;
 				.button();
+
+				@media @mobile{
+				margin-top: 20px;
+				width: 350px;
+				text-align: center;
+
+				
+				}
 			}
 		}
 	}
@@ -123,6 +152,11 @@ html, body{
 		padding-top: 60px;
 		.flex-row-nowrap();
 		justify-content: center;
+		
+		@media @mobile{
+			.flex-column-nowrap();
+			align-items: center;
+		}
 	}
 	.wrapper{
 		height:400px;
@@ -134,7 +168,7 @@ html, body{
 	.img-div{
 		height: 300px;
 		width: 300px;
-		overflow:hidden;
+		overflow: hidden;
 		display: flex;
 
 		justify-content:center;
@@ -146,20 +180,26 @@ html, body{
 		margin-top: 50px;
 	}
 	.content{
-		height: 350px;
+		
 		width: 350px;
+		padding: 10px;
+		@media @mobile{
+			padding: 50px 0;
+		}
+
 	}
 	.intro.content {
 		height: 400px;
 		width: 400px;
+		padding: 20px;
 		display: flex;
 		flex-flow: column nowrap;
-		justify-content: center;
-		align-items: center;
+		justify-content: space-evenly;
+		align-content: center;
 		h2{
 		.font-style-1();
 		}
-
+		
 	}
 
 	hr{
@@ -172,6 +212,10 @@ html, body{
 		height: 500px;
 		border-right: 1px solid @font-color;
 		margin-top: -51px;
+
+		@media @mobile {
+			display:none;
+		}
 	}
 
 	.middle{
@@ -179,6 +223,12 @@ html, body{
 		padding: 50px 0;
 		.flex-row-nowrap();
 		justify-content: space-between;
+
+		@media @mobile{
+			.flex-column-nowrap();
+			align-items: center;
+		}
+
 		h3{
 			.font-style-1();
 			padding-top: 10px;
@@ -204,7 +254,7 @@ html, body{
 					font-weight: bold;
 				}
 				th, td{
-					text-align: right;
+					text-align: center;
 					height: 50px;
 					padding: 15px 15px 15px 0;
 				}
@@ -212,4 +262,21 @@ html, body{
 
 		}
 	}
+
+	.bottom{
+		margin-top: 50px;
+		h3{
+			.font-style-1();
+			text-align: center;
+			padding-bottom: 30px;
+		}
+		span{
+			.font-style-2();
+		}
+		li{
+			text-align:center;
+			padding: 30px 0;
+		}
+	}
+
 }
